# screenxshot

./: .gitignore  AGENT.md  GOALS.md  README.md  index.html  package-lock.json  package.json  prism.html
apps/desktop/: RELEASE.md  index.html  overlay.html  package.json  pin.html  scroll.html  settings.html  toast.html  vite.config.ts
apps/desktop/src/: HistoryPanel.tsx  Titlebar.tsx  bytesToObjectUrl.test.ts  bytesToObjectUrl.ts  clipboardFallback.test.ts  clipboardFallback.ts  desktop.css  desktopBridge.ts  loadBytesIntoEditor.test.ts  main.tsx  savePath.test.ts  savePath.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: capture.rs  commands.rs  error.rs  history.rs  hotkey.rs  lib.rs  overlay.rs  pin.rs  scroll.rs  settings.rs  stitch.rs  toast.rs
apps/desktop/src/overlay/: countdown.test.ts  countdown.ts  overlay.css  overlay.ts  rect.test.ts  rect.ts  windowPick.test.ts  windowPick.ts
apps/desktop/src/pin/: pin.css  pin.tsx
apps/desktop/src/scroll/: scroll.css  scroll.ts
apps/desktop/src/settings/: HotkeyRecorder.tsx  capabilities.test.ts  capabilities.ts  hotkeyCombo.test.ts  hotkeyCombo.ts  settings.css  settings.tsx  types.ts
apps/desktop/src/toast/: remaining.test.ts  remaining.ts  toast.css  toast.ts
apps/web/: package.json  vite.config.js
apps/web/public/: robots.txt  site.webmanifest
apps/web/src/: handoff.js  main.jsx  router.jsx
apps/web/src/components/: Caps.jsx  Header.jsx  Hero.jsx
apps/web/src/routes/: HomePage.jsx
docs/plans/: 2026-07-17-001-feat-tauri-desktop-app-plan.md  2026-07-17-002-feat-desktop-native-ux-plan.md  2026-07-18-001-bettershot-gap-analysis.md  2026-07-18-002-bettershot-do-it-better.md  2026-07-18-003-next-improvements.md  2026-07-19-001-long-screenshot-rethink.md
public/: robots.txt  site.webmanifest  sitemap.xml
src/: main.jsx
src/components/: Footer.jsx  Header.jsx  Hero.jsx  Studio.jsx
src/editor/: data.js  engine.js  instance.js  store.js
src/hooks/: useParallax.js
src/routes/: HomePage.jsx
