[package]
name = "screenxshot"
version = "1.0.0"
description = "ScreenXShot desktop"
authors = ["ScreenXShot"]
edition = "2021"

# Required for mobile builds: lib crate holds all app logic; main.rs is a thin
# passthrough that Tauri replaces with a mobile entry point on mobile targets.
[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
xcap = "0.7"
image = { version = "0.25", default-features = false, features = ["png"] }
